updated spread function behaviour

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="#reset" class="btn" onclick="spread()">Spread</a>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="js.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
