--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="one">
-    <a href="#reset" class="btn" onclick="spread()">Spread</a>
-  </div>
+  <div id="one"></div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="main.js"></script>
 </body>
