--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html !DOCTYPE>
 <head>
-  <title>Nice effect</title>
+  <title>Nice effect 2</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
