--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="one"></div>
+  <div id="one">
+    <a href="#reset" class="btn">Hover me</a>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="main.js"></script>
 </body>
